--- a/src/main/resources/properties/db.properties
+++ b/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 db_dirver=com.mysql.jdbc.Driver
 db_url=jdbc:mysql://localhost:3306/uiqun?useUnicode=true&amp;characterEncoding=UTF-8
 db_username=root
-db_password=123456
+db_password=root
