--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,12 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.9</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-scratchpad</artifactId>
+      <version>3.9</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl -->
     <dependency>
       <groupId>net.sourceforge.jexcelapi</groupId>
@@ -210,6 +216,12 @@
     <artifactId>slf4j-simple</artifactId>
     <version>1.7.25</version>
     <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
